Self/mydevorg/Unpackaged/Config/objects/Koach_Call_Focus__c.object
<CustomObject>
    <fields>
        <fullName>CallFocusIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>CallFocusIdentifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Call_Focus__c</fullName>
        <description>Determine the call focus based on brand and segmentation</description>
        <inlineHelpText>Determine the call focus based on brand and segmentation</inlineHelpText>
        <label>Call Focus</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Koach_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Koach Brand</label>
        <referenceTo>Koach_Brand__c</referenceTo>
        <relationshipLabel>Koach Call Focus</relationshipLabel>
        <relationshipName>Koach_Call_Focus</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Koach_Segmentation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Koach Segmentation</label>
        <referenceTo>Koach_Segmentation__c</referenceTo>
        <relationshipLabel>Koach Call Focus</relationshipLabel>
        <relationshipName>Koach_Call_Focus</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <label>Koach Call Focus</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Koach_Brand__c</columns>
        <columns>Koach_Segmentation__c</columns>
        <columns>Call_Focus__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand Segmentation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Koach Call Focus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>